--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- CALCULADORA -->
 
+    <h1 class="max-w-[250px] text-center mb-[40px]">Hecho por Sebastian Vasquez Echavarria ficha:3010403</h1>
+
     <form 
         name="calculadora"
         class="w-[250px] mx-auto p-[5px] rounded-[8px]">
